# template-cpp

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
src/: hello_world.cpp
test/: CMakeLists.txt  hello_world_test.cpp
